--- a/myapp2/public/stylesheets/style.css
+++ b/myapp2/public/stylesheets/style.css
@@ -1,6 +1,14 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin:0 !important;
+  padding:0;
+  box-sizing: border-box;
+}
+html body{
+  margin:0 !important;
+  padding:0;
+  box-sizing: border-box;
 }
 
 a {
