--- a/myapp2/views/login.pug
+++ b/myapp2/views/login.pug
@@ -1,12 +1,12 @@
-
 h1 Login
-form(action="/login", method="POST")
+
+form#loginForm(action="/login", method="POST")
   div(style="display:flex;flex-direction:row;gap:10px;")
     div(style="display:flex;flex-direction:column;gap:5px;")
-        label(for="email") Email
-        input(type="text", name="email", placeholder="michael@sharma.com")
+      label(for="email") Email
+      input(type="text", name="email", placeholder="michael@sharma.com", required=true)
     div(style="display:flex;flex-direction:column;gap:5px;")
-        label(for="password") Password
-        input(type="password", name="password", placeholder="********")
+      label(for="password") Password
+      input(type="password", name="password", placeholder="********", required=true)
   button(type="submit" style="margin-top:10px;") Login
 
